--- a/materiais/static/css/base.css
+++ b/materiais/static/css/base.css
@@ -153,8 +153,10 @@ ul.errorlist {
 }
 
 #sidebar {
-    width:220px;
-    padding:30px 20px 0 0;
+    width: 20px;
+    /*width:220px;*/
+    padding: 0;
+    /*padding:30px 20px 0 0;*/
     float:left;
     /*background-color: lightblue;*/
 }
@@ -167,7 +169,8 @@ ul.errorlist {
 #sidebar ul li {
     margin:0;
     list-style:none;
-    padding:10px 14px;
+    padding: 0;
+    /*padding:10px 14px;*/
 }
 
 #sidebar ul li a {
