acrescentei uma div na login page

--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 <html>
+<div class="container-fluid">
     {% if messages %}
         <ul class="messages">
             {% for message in messages %}
@@ -21,5 +22,6 @@
         <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
     </form>
   </body>
+</div>
 </html>
 {% endblock %}
