side bar some completamente

--- a/materiais/static/css/style.css
+++ b/materiais/static/css/style.css
@@ -240,8 +240,8 @@ a.article:hover {
     }
 
     #sidebar.active {
-        /* margin-left: 0 !important;*/
-        margin-left: -250px;
+       margin-left: 0 !important;
+
     }
 
     #sidebar .sidebar-header h3,
