--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -16,8 +16,11 @@
     <h1 class="h3 mb-3 font-weight-normal">Informe suas credenciais</h1>
     <form class="form-signin" method="POST">
         {% csrf_token %}
+        <div class="content-fluid">
         {{ form }}
+        </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
+        <br>
         <a href="{% url 'reset_password' %}">Esqueceu a Senha?</a>
         <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
     </form>
