--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -13,7 +13,7 @@
         </ul>
     {% endif %}
   <body class="text-center">
-    <h1 class="h3 mb-3 font-weight-normal">Informe suas credenciais</h1>
+    <h1 class="h3 mb-3 font-weight-normal">Login</h1>
     <form class="form-signin" method="POST">
         {% csrf_token %}
         <div class="content-fluid">
@@ -22,7 +22,7 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
         <br>
         <a href="{% url 'reset_password' %}">Esqueceu a Senha?</a>
-        <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
+        <p class="mt-5 mb-3 text-muted">&copy; 2019</p>
     </form>
   </body>
 
