--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -21,7 +21,7 @@
 
         <h6><i class="fas fa-arrow-alt-circle-down"></i> Itens no carrinho de compras <i class="fas fa-arrow-alt-circle-down"></i></h6>
 
-        <div class="row">
+        <div class="container-fluid">
             {% for item in cart %}
                 {% with produto=item.product %}
 
