producot detail container-fluid

--- a/materiais/templates/materiais/produto/detail.html
+++ b/materiais/templates/materiais/produto/detail.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-    <div class="product-detail">
+    <div class="container-fluid">
        <img src="{% if produto.image %}{{ produto.image.url }}{% else %}{% static 'img/no_image.png' %}{% endif %}">
 
         <h4>{{ produto.descricao }}</h4>
