--- a/materiais/templates/materiais/expedicao/expedicao.html
+++ b/materiais/templates/materiais/expedicao/expedicao.html
@@ -3,12 +3,12 @@
 {% block content %}
 
 <!--
-PEDIDOS A SEREM SEPARADOS
+PEDIDOS A SEREM PREPARADOS
 -->
 <div class="container-fluid">
     <h4><p class="font-weight-bold text-center">Expedição</p></h4>
     <span class="border border-primary">
-        <h5><p class="font-weight-bold">Pedidos a Separar</p></h5>
+        <h5><p class="font-weight-bold">Pedidos a serem Preparados</p></h5>
         <div class="table-responsive">
         <table class="table table-striped table-bordered table-hover">
           <thead>
@@ -44,7 +44,7 @@ PEDIDOS A SEREM SEPARADOS
                       <td>{{ pedido.status_pedido }}</td>
                       <td>
                           <form action="{% url 'materiais:inicia_separacao' pedido.id %}" method="post">
-                                <input type="submit" value="Separar">
+                                <input class="btn btn-secondary" type="submit" value="Preparar">
                                 {% csrf_token %}
                           </form>
                       </td>
@@ -58,11 +58,11 @@ PEDIDOS A SEREM SEPARADOS
 </div>
 
 <!--
-PEDIDOS EM PROCESSO DE SEPARAÇÃO
+PEDIDOS EM PROCESSO DE PREPARAÇÃO
 -->
 <div class="container-fluid">
     <span class="border border-warning">
-        <h5><p class="font-weight-bold">Pedidos em Separação</p></h5>
+        <h5><p class="font-weight-bold">Pedidos em Preparação</p></h5>
         <div class="table-responsive">
         <table class="table table-striped table-bordered table-hover">
           <thead>
@@ -96,7 +96,7 @@ PEDIDOS EM PROCESSO DE SEPARAÇÃO
                       <td>{{ pedido.status_pedido }}</td>
                       <td>
                           <form action="{% url 'materiais:finaliza_separacao' pedido.id %}" method="post">
-                                <input type="submit" value="Finalizar">
+                                <input class="btn btn-warning" type="submit" value="Finalizar">
                                 {% csrf_token %}
                           </form>
                       </td>
@@ -109,11 +109,11 @@ PEDIDOS EM PROCESSO DE SEPARAÇÃO
 </div>
 
 <!--
-PEDIDOS SEPARADOS
+PEDIDOS PRONTOS
 -->
 <div class="container-fluid">
     <span class="border border-success">
-        <h5><p class="font-weight-bold">Pedidos Separados</p></h5>
+        <h5><p class="font-weight-bold">Pedidos Prontos</p></h5>
         <div class="table-responsive">
         <table class="table table-striped table-bordered table-hover">
           <thead>
@@ -147,7 +147,7 @@ PEDIDOS SEPARADOS
                   <td>{{ pedido.status_pedido }}</td>
                   <td>
                       <form action="{% url 'materiais:estorna_separacao' pedido.id %}" method="post">
-                            <input type="submit" value="Estornar">
+                            <input class="btn btn-success" type="submit" value="Estornar">
                             {% csrf_token %}
                       </form>
                   </td>
