--- a/materiais/templates/materiais/base.html
+++ b/materiais/templates/materiais/base.html
@@ -100,27 +100,7 @@
                         </div>
                     {% endif %}
 
-                <div class="btn-toolbar justify-content-between" role="toolbar" aria-label="Toolbar with button groups">
-                    <div class="btn-group" role="group" aria-label="First group">
-                        <button type="button" class="btn btn-secondary border"></button>
-                        <button type="button" class="btn btn-secondary border"></button>
-                        <button type="button" class="btn btn-secondary border">M</button>
-                        <button type="button" class="btn btn-secondary border">A</button>
-                        <button type="button" class="btn btn-secondary border">S</button>
-                        <button type="button" class="btn btn-secondary border">S</button>
-                        <button type="button" class="btn btn-secondary border">A</button>
-                        <button type="button" class="btn btn-secondary border">S</button>
-                        <button type="button" class="btn btn-secondary border"></button>
-                        <button type="button" class="btn btn-secondary border">M</button>
-                        <button type="button" class="btn btn-secondary border">A</button>
-                        <button type="button" class="btn btn-secondary border">R</button>
-                        <button type="button" class="btn btn-secondary border">I</button>
-                        <button type="button" class="btn btn-secondary border">A</button>
-                        <button type="button" class="btn btn-secondary border"></button>
-                        <button type="button" class="btn btn-secondary border"></button>
 
-                    </div>
-                </div>
 
 
 
@@ -166,6 +146,25 @@
 
                 </div>
             </nav>
+
+            <div class="btn-toolbar justify-content-between mt-0" role="toolbar" aria-label="Toolbar with button groups">
+                    <div class="btn-group" role="group" aria-label="First group">
+                        <button type="button" class="btn btn-secondary border btn-sm">M</button>
+                        <button type="button" class="btn btn-secondary border btn-sm">A</button>
+                        <button type="button" class="btn btn-secondary border btn-sm">S</button>
+                        <button type="button" class="btn btn-secondary border btn-sm">S</button>
+                        <button type="button" class="btn btn-secondary border btn-sm">A</button>
+                        <button type="button" class="btn btn-secondary border btn-sm">S</button>
+                        <button type="button" class="btn btn-secondary border btn-sm"></button>
+                        <button type="button" class="btn btn-secondary border btn-sm">M</button>
+                        <button type="button" class="btn btn-secondary border btn-sm">A</button>
+                        <button type="button" class="btn btn-secondary border btn-sm">R</button>
+                        <button type="button" class="btn btn-secondary border btn-sm">I</button>
+                        <button type="button" class="btn btn-secondary border btn-sm">A</button>
+
+                    </div>
+                </div>
+
             </div>
 
             <div class="container">
