--- a/materiais/templates/materiais/produto/detail.html
+++ b/materiais/templates/materiais/produto/detail.html
@@ -10,7 +10,7 @@
 
     <div class="container-fluid">
 
-        <img src="{{ produto.imageURL }}">
+        <img class="img-fluid" src="{{ produto.imageURL }}">
 
 
         <h4>{{ produto.descricao }}</h4>
