Ajustando o tamanho dos fontes de acordo com os tamanhos da tela, para computador ou mobile

--- a/materiais/templates/materiais/base.html
+++ b/materiais/templates/materiais/base.html
@@ -6,6 +6,21 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <style>
+        @media screen and (min-width: 601px) {
+          div.example {
+            font-size: 80px;
+          }
+        }
+
+        @media screen and (max-width: 600px) {
+          div.example {
+            font-size: 30px;
+          }
+        }
+    </style>
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>Vendas</title>
