--- a/accounts/templates/registration/logout.html
+++ b/accounts/templates/registration/logout.html
@@ -4,13 +4,13 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container text-center">
 
-    <h2>Sessão encerrada</h2>
+    <h2 class="text-danger">Sessão encerrada</h2>
 
     <h3>Obrigado por utilizar nosso site.</h3>
 
-    <h4><a href="{% url 'login' %}">Entrar novamente</a></h4>
+    <h4><a class="btn btn-outline-success" href="{% url 'login' %}">Entrar novamente</a></h4>
 
 </div>
 
